--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     container_name: mysql_container
     environment:
       MYSQL_ROOT_PASSWORD: test
-      MYSQL_DATABASE: test
+      MYSQL_DATABASE: ShortLink
       MYSQL_USER: test
       MYSQL_PASSWORD: test123
     ports:
